- replaced some hardcoded values with variables. - fixed button alignment bug. - changed left/right topbar width based on the amount of content inside - fixed so user dropdown appears over left / right bar

--- a/Resources/Private/Less/Elements/_other.less
+++ b/Resources/Private/Less/Elements/_other.less
@@ -99,19 +99,24 @@ body {
 }
 
 .t3-frontend-editing__full-view {
-  width: 55px;
-  height: 55px;
   z-index: 11000;
   position: absolute;
   right: 0;
   left: auto;
-  background: none;
+  width: @top-bar-height;
+  height: @top-bar-height;
+  background-color: @gray-dark;
   font-size: 1em;
   line-height: 1em;
   border: 0;
   border-left: 1px solid darken(@color-t3-gray-dark, 10%);
   border-radius: 0;
   outline: 0;
+  padding: 0;
+
+  &:hover {
+    background-color: lighten(@gray-dark, 20%);
+  }
 
   &.full-view-active {
     background-color: @color-t3-primary;
@@ -125,10 +130,6 @@ body {
       background-color: lighten(@color-t3-primary, 10%);
       color: @black;
     }
-  }
-
-  &:hover {
-    background-color: lighten(@gray-dark, 20%);
   }
 
   svg path {
